@@ -31,9 +31,6 @@ from Products.ATContentTypes.criteria.path import ATPathCriterion
 from Products.ATContentTypes.criteria.relativepath import ATRelativePathCriterion
 tests = []
 
-# z3 imports
-from Products.ATContentTypes.interface import IATTopicCriterion as Z3IATTopicCriterion
-from zope.interface.verify import verifyObject as Z3verifyObject
 
 class CriteriaTest(atcttestcase.ATCTSiteTestCase):
 
@@ -103,10 +100,6 @@ class CriteriaTest(atcttestcase.ATCTSiteTestCase):
             self.failUnless(verifyObject(IBaseContent, self.dummy))
             self.failUnless(verifyObject(IATTopicCriterion, self.dummy))
 
-    def test_Z3implements(self):
-        if self.dummy is not None:
-            iface = Z3IATTopicCriterion
-            self.failUnless(Z3verifyObject(iface, self.dummy))
 
 class TestATBaseCriterion(CriteriaTest):
     klass = ATBaseCriterion
